# layerzero-airdrop-rescue

./: .env.example  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/api/: client.rs
src/proof/: encoding.rs
src/transactions/: create_transaction.rs  mod.rs  send_transaction.rs
src/utils/: config.rs  constants.rs  mod.rs  provider.rs
tests/: get_eth_price_test.rs
