[package]
name = "layerzero-data-hazirlama"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
alloy = { version = "0.1.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
eyre = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"